<resources>
    <string name="app_name">LocationPinned</string>
    <string name="add_location">Add Location</string>
    <string name="edit_location">Edit Location</string>
    <string name="search_location">Search Locations</string>
    <string name="location_latitude">Latitude</string>
    <string name="location_longitude">Longitude</string>
    <string name="location_address">Address</string>
    <string name="save_location">Save</string>
    <string name="sample_note_title">Sample Note</string>
</resources>