<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addLocationToolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:contextClickable="false"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/add_location"
        app:titleTextColor="#FFFFFF" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addLocationToolbar">

        <EditText
            android:id="@+id/locationAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_address"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:textColorHint="#8D6E63"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/locationLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/location_latitude"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            android:textColorHint="#795548"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/locationLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/location_longitude"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            android:textColorHint="#795548"
            tools:ignore="VisualLintTextFieldSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveLocationButton"
                style="@style/Widget.Material3.Button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:background="#E91E63"
                android:onClick="returnToMainActivity"
                android:text="@string/save_location"
                android:textColor="#FFFFFF"
                android:textColorLink="#882F4E" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>